--- a/plants/plantsfront/src/index.css
+++ b/plants/plantsfront/src/index.css
@@ -1,108 +1,65 @@
-@keyframes slide {
-  0% {transform: translateX(-2000px)}
-  1%{transform:translate(-2000px);opacity:1}
-  100% {transform:translateX(0);opacity:1}
-}
-@keyframes zoom {
-  0% {}
-  100% {transform: scale(50) translateX(24px)}
-}
-@keyframes widen{
-  from {width: 0;}
-  to {width:1000px}
-}
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: pink;
+  padding:0;
+  margin:0
 }
-.background{
-  width:100vw;
-  height:100vh;
-  background-image:url('images/bg.jpg');
-  background-size: cover;
-  overflow:hidden
+.search_container{
+  background-color: seagreen;
+  margin:0;
+  height:4rem
 }
-.landing{
+/* Rooms */
+.room_container{
+  color:red;
+  margin: 0 1rem 0 1rem;
+  position:relative;
+  z-index: 1
+}
+.room_container > h2 {
+  background-color: rgb(253, 141, 160);
+  height:2rem;
+  padding-left:1rem;
+  text-justify: center;
+  margin:0
+}
+.hide_btn{
+  background-color: transparent;
+  padding:0;
+  color:inherit;
+  border:none;
+  display:flex;
+  align-items: center;
+  justify-content: center;
   position:absolute;
-  background-color: black;
-  color:white;
-  opacity:1;
-  width:100vw;
-  height:100vh;
+  right:0.5rem;
+  top:0;
+  height:2rem;
+  z-index:2
+}
+.room_plants{
+  background-color: blanchedalmond;
+  display:flex;
+  flex-direction:row;
   overflow: hidden;
+  justify-content: space-around;
+  transition: 1s;
+  padding:0;
+  flex-wrap: wrap;
+  height:50rem
+}
+.room_plants.not_shown {
+  height:0
+}
+.plant{
+  width:20rem;
+  aspect-ratio: 1/1;
+  border:1px solid red;
+  transition:0.8s;
   display:flex;
   justify-content: center;
   align-items: center;
-  font-size:200px;
-  font-weight: bold;
-  mix-blend-mode: multiply;
-}
-.text{
-  animation:slide 2s forwards cubic-bezier(0.01, 1, 1, 1) , zoom 3s forwards ease-in 3s;
-  cursor:default;
-  pointer-events: none;
-}
-.list{
-  display:flex;
-  flex-direction: column;
-  gap:40px;
-  letter-spacing: 10px;
-  font-size:60px;
-  color:white;
-  list-style:none;
-  font-style:italic;
-  font-family:serif;
-  color:black;
-  transition:2s
-}
-.list>li{
-  opacity:0;
-  display:inline;
-  border:4px solid transparent;
-  box-shadow:-2px 2px black;
-  transition:1s
-}
-.list>li:hover{
-  color:orange;
-  font-size:70px;
-  width:600px;
-  box-shadow:-2px 2px white;
-}
-.list>*:nth-child(1){
-  animation:slide 2s forwards 3s;
-  width:100px;
-  margin-left:0px
-}
-.list>*:nth-child(2){
-  animation:slide 2s forwards 3.5s;
-  width:250px;
-  margin-left:50px
-}
-.list>*:nth-child(3){
-  animation:slide 2s forwards 4s;
-  width:100px;
-  margin-left:100px
-}
-.list>*:nth-child(4){
-  animation:slide 2s forwards 4.5s;
-  width:300px;
-  margin-left:150px
-}
-.content>hr {
-  position:absolute;
-  top:325px;
-  left:-360px;
-  width:1000px;
-  transform:rotate(67deg);
-  border:1px solid black;
-  animation:widen 1s forwards 6s
+  margin-bottom:1rem;
+  margin-top:1rem;
+  flex-shrink:1
 }
