--- a/plants/plantsfront/src/index.css
+++ b/plants/plantsfront/src/index.css
@@ -11,7 +11,6 @@ body {
 }
 /* Rooms */
 .room_container{
-  color:red;
   margin: 0 1rem 0 1rem;
   position:relative;
   z-index: 1
@@ -21,7 +20,10 @@ body {
   height:2rem;
   padding-left:1rem;
   text-justify: center;
-  margin:0
+  margin:0;
+}
+.room_container>h2:hover{
+  cursor:pointer
 }
 .hide_btn{
   background-color: transparent;
@@ -35,7 +37,10 @@ body {
   right:0.5rem;
   top:0;
   height:2rem;
-  z-index:2
+  z-index:2;
+  transition:1s;
+  transform:rotate(180deg);
+  pointer-events: none;
 }
 .room_plants{
   background-color: blanchedalmond;
@@ -48,12 +53,23 @@ body {
   flex-wrap: wrap;
   height:50rem
 }
+.room_container.not_shown>.room_plants{
+  height:0
+}
+.room_container.not_shown>.hide_btn{
+  transform: rotate(0deg);
+}
 .room_plants.not_shown {
   height:0
 }
+.room_plants.not_shown~.hide_btn{
+  transform:rotate(0deg);
+  color:red
+}
+/* Plants */
 .plant{
   width:20rem;
-  aspect-ratio: 1/1;
+  aspect-ratio: 1/1 !important;
   border:1px solid red;
   transition:0.8s;
   display:flex;
@@ -61,5 +77,57 @@ body {
   align-items: center;
   margin-bottom:1rem;
   margin-top:1rem;
-  flex-shrink:1
+  flex-shrink:1;
+  position:relative;
+  border-radius:10px;
+  overflow:hidden
+}
+.plant_photo{
+  width:100%;
+  height:100%;
+  z-index:0;
+  object-fit: cover;
+  position:absolute;
+  border-radius: 10px;
+}
+.plant_data{
+  z-index:1;
+  background-color: rgb(255, 192, 203, 0.4);
+  position:absolute;
+  bottom:-24%;
+  left:0;
+  right:0;
+  padding:0.7rem;
+  color:black;
+  transition:1s
+}
+.plant:hover>.plant_data{
+  bottom:0
+}
+.plant_name{
+  margin:0;
+  padding:0 0 0.5rem 0.5rem;
+}
+.plant_data>div{
+  margin:0;
+  margin-top:0.5rem;
+  display:flex;
+  align-items: center;
+}
+.plant_data>div>svg{
+  margin-right:0.5rem
+}
+.water_btn{
+  border:none;
+  background-color: transparent;
+  position:absolute;
+  bottom:0;
+  right:0;
+  padding:0;
+  transition:1s;
+  margin:0.5rem
+}
+.water_btn:hover{
+  color: seagreen;
+  cursor:pointer
 }
