--- a/plants/plantsfront/src/index.css
+++ b/plants/plantsfront/src/index.css
@@ -2,12 +2,59 @@
 body {
   background-color: pink;
   padding:0;
-  margin:0
+  margin:0;
+  overflow-y:scroll
 }
+/* Search bar */
 .search_container{
   background-color: seagreen;
   margin:0;
-  height:4rem
+  height:2rem;
+  padding:0.5rem;
+  padding-left:2rem;
+  overflow-y: visible;
+}
+.search_input{
+  height:100%;
+  background-color: white;
+  border:none;
+  color:pink;
+  transition:1s;
+  width:10rem;
+  position:relative
+}
+.search_input:focus{
+  border:none;
+  outline:none;
+  width:50%
+}
+.search_autofill{
+  position:absolute;
+  width:50%;
+  z-index:2;
+  background-color: aliceblue;
+}
+.plant_autofill{
+  padding:0.2rem;
+  padding-left:1rem;
+  display:flex;
+  flex-direction: row;
+  overflow-y: auto;
+  height:9rem
+}
+.plant_autofill:hover{
+  background-color: pink;
+}
+.plant_autofill_photo{
+  height:8rem;
+  width:8rem;
+  object-fit: contain;
+  border:1px solid pink
+}
+.plant_autofill_data{
+  margin-left:1rem;
+  display:grid;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
 }
 /* Rooms */
 .room_container{
@@ -98,7 +145,7 @@ body {
   left:0;
   right:0;
   padding:0.7rem;
-  color:black;
+  color:white;
   transition:1s
 }
 .plant:hover>.plant_data{
