--- a/plants/plantsfront/src/index.css
+++ b/plants/plantsfront/src/index.css
@@ -5,6 +5,13 @@ body {
   overflow-y:scroll;
   height:100vh
 }
+button{
+  background-color: transparent;
+  border:none
+}
+button:focus{
+  border:none
+}
 #root{
   height:100%
 }
@@ -113,9 +120,10 @@ body {
   background-color: pink;
 }
 .room_container{
-  margin: 0 1rem 0 1rem;
+  margin: 1rem;
   position:relative;
   z-index: 1;
+  transition:0.5s
 }
 .room_container > h2 {
   background-color: rgb(253, 141, 160);
@@ -155,8 +163,11 @@ body {
   transition: 1s;
   padding:0;
   flex-wrap: wrap;
-  height:50rem;
+  max-height:50rem;
   border-radius: 0 0 1rem 1rem;
+}
+.room_container.not_shown{
+  margin:0 1rem 0 1rem
 }
 .room_container.not_shown>h2{
   border-radius:0
@@ -168,24 +179,16 @@ body {
   border-radius:0 0 1rem 1rem !important
 }
 .room_container.not_shown>.room_plants{
-  height:0
+  max-height:0
 }
 .room_container.not_shown>.hide_btn{
   transform: rotate(0deg);
-}
-.room_plants.not_shown {
-  height:0
-}
-.room_plants.not_shown~.hide_btn{
-  transform:rotate(0deg);
-  color:red
 }
 /* Plants */
 .plant{
   width:20rem;
   height:23rem;
   aspect-ratio: 1/1 !important;
-  border:1px solid red;
   transition:0.8s;
   display:flex;
   justify-content: center;
@@ -240,10 +243,24 @@ body {
   right:0;
   padding:0;
   transition:1s;
-  margin:0.5rem
+  margin:0.5rem;
+  color:white
 }
 .water_btn:hover{
   color: seagreen;
+  cursor:pointer
+}
+.plant_delete_btn{
+  transition:1s;
+  position:absolute;
+  top:0;
+  right:0;
+  margin:0.5rem;
+  padding:0;
+  color:white
+}
+.plant_delete_btn:hover{
+  color:crimson;
   cursor:pointer
 }
 
