--- a/plants/plantsfront/src/index.css
+++ b/plants/plantsfront/src/index.css
@@ -407,3 +407,15 @@ button:focus{
 .error{
   color:red
 }
+.server_error{
+  background-color: rgba(255, 192, 203, 0.822);
+  border-radius:1rem;
+  padding:0.5rem
+}
+.server_error>*:not(.server_error_label){
+  color:red;
+  margin:0
+}
+.server_error_label{
+  margin:0
+}
