--- a/plants/plantsfront/src/index.css
+++ b/plants/plantsfront/src/index.css
@@ -29,9 +29,7 @@ button:focus{
   height:100%
 }
 .main_container{
-  background-size:400% 400%;
-  background-image:linear-gradient(0.13turn,seagreen,pink,hotpink);
-  animation:background-sweep 20s infinite alternate;
+  background-color: pink;
   min-height:100vh;
   position:relative;
   overflow-y: hidden;
@@ -220,7 +218,10 @@ button:focus{
   max-height:50rem;
   border-radius: 0 0 1rem 1rem;
   border:1px solid honeydew;
-  border-top:none
+  border-top:none;
+  background-size:400% 400%;
+  background-image:linear-gradient(0.13turn,seagreen,pink);
+  animation:background-sweep 20s infinite alternate;
 }
 .room_container.not_shown{
   margin:0 1rem 0 1rem;
@@ -457,6 +458,9 @@ button:focus{
   max-width:300px;
   aspect-ratio: 1/1;
   border-radius: 1rem;
+}
+.current_plant_photo.edit{
+  margin-bottom:1rem
 }
 .current_plant_data_span{
   font-weight: bold;
