--- a/plants/plantsfront/src/index.css
+++ b/plants/plantsfront/src/index.css
@@ -11,6 +11,10 @@
   40%{top:0}
   100%{top:100%}
 }
+@keyframes new_room_appear{
+  from{opacity:0%}
+  to{opacity:100%}
+}
 body {
   padding:0;
   margin:0;
@@ -55,6 +59,18 @@ button:focus{
   position:relative;
   border-bottom: 1px solid honeydew
 }
+.name_container{
+  display:flex;
+  flex-direction: row;
+  height:100%;
+  justify-content: left;
+  align-items: center;
+}
+
+.page_title{
+  margin-left:1rem;
+  color:pink
+}
 .search_input{
   height:100%;
   background-color: white;
@@ -63,19 +79,18 @@ button:focus{
   transition:1s;
   width:10rem;
   position:relative;
-  border-radius:1rem;
+  border-radius:0.75rem;
   padding-left:1rem;
   border:1px solid honeydew;
   position:relative;
-
 }
 .search_input:focus{
   border:none;
   outline:none;
-  width:20rem;
+  width:18rem;
+  box-shadow:0 0 5px honeydew
 }
 .buttons_container{
-
   position:absolute;
   right:0;
   height:3.6rem;
@@ -91,7 +106,7 @@ button:focus{
   cursor:pointer
 }
 .waterAll_btn:hover{
-  color:rgb(79, 167, 255);
+  color:rgb(93, 179, 233);
   cursor:pointer
 }
 
@@ -99,7 +114,7 @@ button:focus{
   position:absolute;
   z-index:2;
   margin-top:5px;
-  background-color: rgba(240, 248, 255);
+  background-color: white;
   max-height: 400px;
   color:pink;
   overflow-y:auto;
@@ -175,7 +190,11 @@ button:focus{
   color:honeydew;
   border-radius: 1rem;
 }
-.room_container > h2 {
+.new_room{
+  opacity:0%;
+  animation: new_room_appear 1s forwards
+}
+.room_container > h2 , .room_container > input{
   background-color: rgb(253, 141, 160);
   height:2rem;
   padding:0.5rem;
@@ -185,6 +204,31 @@ button:focus{
   transition:1s;
   border-radius:1rem 1rem 0 0;
   border:1px solid honeydew
+}
+.room_container > input {
+  width:calc(100% - 1.5rem);
+  border-radius:1rem;
+  font-size:1.5rem;
+  color:white
+}
+.addRoomSendData_btn {
+  position:absolute;
+  right:-1px;
+  top:1px;
+  bottom:0;
+  height:3rem;
+  aspect-ratio: 1/1;
+  border-radius:1rem;
+  transition:0.5s;
+  color:white
+}
+.addRoomSendData_btn:hover{
+  box-shadow: 0 0 5px honeydew;
+  cursor:pointer
+}
+.room_container > input:focus{
+  box-shadow: 0 0 10px honeydew;
+  outline:none
 }
 .room_container>h2:hover{
   cursor:pointer
@@ -275,7 +319,7 @@ button:focus{
 }
 .plant_data{
   z-index:1;
-  background-color: rgb(255, 192, 203, 0.4);
+  background-color: rgba(255, 192, 203, 0.492);
   position:absolute;
   bottom:-24%;
   left:0;
@@ -312,7 +356,7 @@ button:focus{
   color:white
 }
 .water_btn:hover{
-  color:dodgerblue;
+  color:rgb(93, 179, 233);
   cursor:pointer
 }
 .plant_delete_btn{
@@ -359,10 +403,13 @@ button:focus{
   width:25%;
   max-width: 300px;
   border-radius: 1rem;
-  overflow-y:auto
+  overflow-y:auto;
+  border:1px solid honeydew;
+  box-shadow: 0 0 5px honeydew;
 }
 .side_panel_newplant{
   margin:0;
+  color:honeydew;
   margin-bottom:0.5rem;
 }
 .side_panel::-webkit-scrollbar{
@@ -386,7 +433,9 @@ button:focus{
   transition: 0.5s;
 }
 .side_panel_closebtn:hover{
-  color:pink
+  color:pink;
+  cursor:pointer
+
 }
 .side_panel_form{
   display:flex;
