--- a/plants/plantsfront/src/index.css
+++ b/plants/plantsfront/src/index.css
@@ -20,7 +20,7 @@ body {
   margin:0;
   overflow-y:scroll;
   height:100vh;
-  
+  font-family: 'Playfair Display', serif; 
 }
 button{
   background-color: transparent;
@@ -191,8 +191,15 @@ button:focus{
   border-radius: 1rem;
 }
 .new_room{
+  opacity:100%;
+  transition:1s;
+  scale:1
+}
+.new_room.not_visible{
   opacity:0%;
-  animation: new_room_appear 1s forwards
+  scale:0.02;
+  pointer-events: none;
+
 }
 .room_container > h2 , .room_container > input{
   background-color: rgb(253, 141, 160);
@@ -225,6 +232,14 @@ button:focus{
 .addRoomSendData_btn:hover{
   box-shadow: 0 0 5px honeydew;
   cursor:pointer
+}
+.addRoom_error{
+  height:1.5rem;
+  font-size:1rem;
+  background-color: pink;
+  color:red;
+  width:fit-content;
+  margin-left:0.5rem
 }
 .room_container > input:focus{
   box-shadow: 0 0 10px honeydew;
@@ -321,7 +336,7 @@ button:focus{
   z-index:1;
   background-color: rgba(255, 192, 203, 0.492);
   position:absolute;
-  bottom:-24%;
+  bottom:-26%;
   left:0;
   right:0;
   padding:0.7rem;
@@ -352,7 +367,7 @@ button:focus{
   right:0;
   padding:0;
   transition:1s;
-  margin:0.5rem;
+  margin:0.7rem;
   color:white
 }
 .water_btn:hover{
@@ -364,7 +379,8 @@ button:focus{
   position:absolute;
   top:0;
   right:0;
-  margin:0.5rem;
+  margin:0.7rem;
+  margin-top:0.8rem;
   padding:0;
   color:white
 }
@@ -377,7 +393,7 @@ button:focus{
   right:0;
   top:33%;
   transition:1s;
-  margin:0.5rem;
+  margin:0.7rem;
   padding:0;
   color:white
 }
@@ -482,8 +498,10 @@ button:focus{
   display:none
 }
 .photo_input_label{
+  font-family:serif;
   display:flex;
   align-items: center;
+  justify-content: center;
   cursor:pointer;
   background-color: white;
   transition:0.5s;
@@ -550,4 +568,27 @@ button:focus{
 }
 .server_error_label{
   margin:0
+}
+@media screen and (max-width:560px) {
+  .search_container{
+    padding-left:0.25rem;
+    white-space: nowrap;
+  }
+  .search_input{
+    width:35%;
+    margin-left:1rem
+  }
+  .search_input:focus{
+    width:50%
+  }
+  .page_title{
+    display: none;
+  }
+  .search_autofill{
+    width:15rem
+  }
+  .side_panel{
+    width:60%;
+    right:-100%
+  }
 }
