--- a/plants/plantsfront/src/index.css
+++ b/plants/plantsfront/src/index.css
@@ -15,6 +15,11 @@
   from{opacity:0%}
   to{opacity:100%}
 }
+@keyframes loading{
+  0%{left:30%; transform:scale(1)}
+  50%{left:50%; transform:scale(2)}
+  100%{left:70%; transform:scale(1)}
+}
 body {
   padding:0;
   margin:0;
@@ -147,6 +152,25 @@ button:focus{
   cursor:pointer;
   color:hotpink;
   z-index:3;
+}
+.plant_autofill.loading{
+  position:relative;
+  display:flex;
+  justify-content: center;
+  padding:0;
+  padding-left:0;
+  pointer-events: none;
+}
+.plant_autofill.loading::before{
+  content:'';
+  background-color: pink;
+  position:absolute;
+  left:30%;
+  width:10px;
+  height:10px;
+  border-radius: 5px;
+  animation: loading 2s infinite alternate ease-in-out;
+  transition:1s;
 }
 .new_plant_svg{
   width:2rem
@@ -580,6 +604,9 @@ button:focus{
   }
   .search_input:focus{
     width:50%
+  }
+  .search_input:disabled{
+    background-color: gray;
   }
   .page_title{
     display: none;
